<resources>
    <string name="app_name">Prey</string>
    <string name="menu_title_1">current device status</string>
    <string name="menu_title_2">NOT PROTECTED YET.</string>
    <string name="menu_title_3">WE ARE ALMOST THERE</string>
    <string name="menu_title_4">Administration privileges needed</string>
    <string name="menu_title_5">They’ll allow Prey to protect your phone and help you control it if it ever gets lost or stolen. Your information and privacy are safe with us.</string>
    <string name="menu_button_1">ACTIVATE PROTECTION</string>
    <string name="signin_subtitle">prey account</string>
    <string name="signin_title">SIGN IN</string>
    <string name="field_email_signin">email</string>
    <string name="field_password_signin">password</string>
    <string name="button_signin">ACCESS TO MY ACCOUNT</string>
    <string name="link_signin">don\’t have an account?</string>
    <string name="signup_subtitle">prey account</string>
    <string name="signup_title">SIGN UP</string>
    <string name="field_name_signup">your name</string>
    <string name="field_email_signup">email</string>
    <string name="field_password_signup">password</string>
    <string name="button_signup">CREATE MY NEW ACCOUNT</string>
    <string name="link_signup">already have an account?</string>
    <string name="permission_error_title_1">current device status</string>
    <string name="permission_error_title_2">NOT PROTECTED.</string>
    <string name="permission_error_title_3">Prey utilizes the Device Administrator permission for its Remote Wipe and Lock features.\nGranting permission allows you to activate our data protection tools remotely to counter data theft.\nThe Remote Wipe lets you execute a data wipe on a lost device, while our Lock feature blocks access to it with a lock screen and a custom password.</string>
    <string name="permission_error_button_1">ACTIVATE PROTECTION</string>
    <string name="protect_title_1">current device status</string>
    <string name="protect_title_2">PROTECTED</string>
    <string name="protect_button_title_1">REMOTE CONTROL FROM YOUR</string>
    <string name="protect_button_subtitle_1">PREY ACCOUNT</string>
    <string name="protect_button_title_2">CONFIGURE</string>
    <string name="protect_button_subtitle_2">PREY SETTINGS</string>
    <string name="protect_title_3">Take the tour</string>
    <string name="protect_title_4">What can Prey do for you...</string>
    <string name="protect_title_5">How to uninstall Prey</string>
    <string name="password_subtitle">For your safety, enter your password, to manage device settings.</string>
    <string name="password_button">SIGN IN</string>
    <string name="password_forgot">FORGOT PASSWORD?</string>
    <string name="password_hint">Type in your password</string>
    <string name="tour_01_title">DOWNLOAD PREY ON THE DEVICES YOU WANT TO PROTECT.</string>
    <string name="tour_01_subtitle">It works on all major operating systems, so it lets you keep track and trigger actions on all your devices from your Prey account.</string>
    <string name="tour_01_button">NEXT</string>
    <string name="tour_02_title">GEOLOCATION AND SO MUCH MORE</string>
    <string name="tour_02_subtitle">Once remotely triggered from your Prey account, your device will gather and deliver detailed evidence back to you, including a picture of who\'s using it — often the crucial piece of data that police officers need to take action.</string>
    <string name="tour_02_button">NEXT</string>
    <string name="tour_03_title">PREVENT UNAUTHORIZED ACCESS</string>
    <string name="tour_03_subtitle">Use Prey to fully lock down your devices and delete your stored passwords, to ensure that no one will have access to your private stuff. All this while consuming minimal battery life.</string>
    <string name="tour_03_button">NEXT</string>
    <string name="tour_04_title">PRIVACY COMES FIRST</string>
    <string name="tour_04_subtitle">Sensitive data is gathered only when you request it, and is for your eyes only ‐ nothing is sent without your permission. You can always check our source code if you want to make sure.</string>
    <string name="tour_04_button">NEXT</string>
    <string name="tour_05_title">DON\’T TAKE OUR WORD FOR IT</string>
    <string name="tour_05_subtitle">I\’m euphoric and laughing with excitement that this actually worked.</string>
    <string name="tour_05_button">NEXT</string>
    <string name="tour_06_title">FREE WITH NO GIMMICKS, PLANS FOR EXTENDED PROTECTION</string>
    <string name="tour_06_subtitle">Prey is completely free of charge for as long as you want to. We also have some great plans with extra features!</string>
    <string name="tour_06_button">NOW YOU\'RE IN CONTROL</string>
    <string name="yes">Yes</string>
<string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="feedback_principal_title">Is everything alright, dear?</string>
    <string name="feedback_principal_message">It seems you\'ve been using Prey for a while now. Would you tell us what you think about it?</string>
<string name="feedback_principal_button1">I Love It</string>
    <string name="feedback_principal_button2">It Needs Improvements</string>
    <string name="feedback_principal_button3">No, thanks</string>
    <string name="feedback_form_title">Drop us a line</string>
<string name="feedback_form_message">What would you change about Prey if you could?</string>
<string name="feedback_form_field_hint_comment"></string>
    <string name="feedback_form_button1">OK, send</string>
<string name="feedback_form_button2">NO, thanks</string>
<string name="feedback_form_send_email">Send Email</string>
    <string name="preferences_password_old">Current password</string>
    <string name="preferences_password_new">New password</string>
<string name="preferences_password_confirm">Confirm password</string>
    <string name="preferences_config_title">Manage Your Devices</string>
    <string name="preferences_config_pin_title">Pin Settings</string>
    <string name="preferences_go_to_control_panel_title">Manage Your Devices</string>
<string name="preferences_go_to_control_panel_summary">Go to your Prey account</string>
    <string name="preferences_admin_enabled_title">Revoke extra permissions</string>
    <string name="preferences_admin_enabled_summary">Allows you to uninstall Prey</string>
    <string name="preferences_detach_title">Detach device</string>
<string name="preferences_detach_summary">Deletes this device from your Prey account</string>
<string name="preferences_detach_dialog_title">Detaching device</string>
<string name="preferences_detach_dialog_message">Your device will be detached from the Control Panel. This will also delete all its stored reports.\n\nAre you sure?</string>
    <string name="preferences_disable_power_options_title">Shield OFF Button</string>
    <string name="preferences_disable_power_options_summary">Prevents your device from being turned off manually. Upon using the OFF button it will request your Prey PIN. A notification is shown due to Android policies</string>
    <string name="preferences_disable_power_options_summary_old">Your device can\'t be turned off if its screen is locked</string>
    <string name="preferences_scheduled_title">Set interval frequency</string>
    <string name="preferences_scheduled_summary">How often Prey will run if no Google Services are available</string>
    <string name="preferences_about_category_name">About</string>
    <string name="preferences_about">Prey for Android™</string>
    <string name="preferences_about_title">Prey for Android™</string>
    <string name="preferences_about_message">Prey for Android™</string>
    <string name="preferences_password_length_error">Passwords must be at least 6 characters</string>
    <string name="preferences_admin_disabled_title">Grant extra permissions</string>
<string name="preferences_admin_disabled_summary">Allows lock and uninstall protection</string>
    <string name="preferences_admin_enabled_dialog_title">Please note</string>
<string name="preferences_admin_enabled_dialog_message">By clicking \'Yes\' you will revoke Prey administration privileges on this device. Without these privileges, Prey won\'t be able to erase remotely.\nAre you sure?</string>
    <string name="preferences_passwords_do_not_match">Passwords do not match</string>
<string name="preferences_passwords_updating_dialog">Updating your Prey password.\nPlease wait…</string>
<string name="preferences_passwords_successfully_changed">Your Prey password was successfully changed</string>
    <string name="preferences_detach_dettaching_message">Detaching device, please wait…</string>
    <string name="preferences_admin_disabled_dialog_title">Extra permissions</string>
    <string name="preference_pin">Prey security PIN</string>
    <string name="preference_pin_summary">Create your 4 digit PIN code to activate the use the OFF Button Lock feature</string>
    <string name="preference_pin_dialog_title">Set you Prey security PIN</string>
    <string name="preference_sms">SMS commands</string>
    <string name="preference_sms_summary">It allows execute actions on your device remotely by sending instructions via a text message</string>
    <string name="preference_sms_category_title">SMS</string>
    <string name="preference_sms_checkbox_title">Enable SMS commands</string>
    <string name="preference_sms_checkbox_summary">Send a text message to your phone with the command you need and action is activated on your device</string>
    <string name="preference_sms_category_available">Available commands</string>
    <string name="preference_sms_command_location">prey PIN location phone_number</string>
    <string name="preference_sms_command_location_summary">Will return the device’s geolocation via SMS to phone_number</string>
    <string name="preference_sms_command_lock">prey PIN lock lock_PIN</string>
    <string name="preference_sms_command_lock_summary">Will lock the device’s screen until lock_PIN is entered.</string>
    <string name="preference_sms_command_unlock">prey PIN unlock</string>
    <string name="preference_sms_command_unlock_summary">Will force unlock your device’s screen. It’s perfect for forgotten passwords!</string>
    <string name="preference_sms_command_alarm">prey PIN alarm</string>
    <string name="preference_sms_command_alarm_summary">Will sound an alarm</string>
    <string name="preference_sms_command_alert">prey PIN alert some_text</string>
    <string name="preference_sms_command_alert_summary">Will show some_text as a system notification</string>
    <string name="i_agree_terms_conditions">I have read and agree to the <u>Terms and Conditions and Privacy Policy</u></string>
    <string name="i_confirm_i_am_over_16">I confirm that I am over 16 years old</string>
    <string name="restriction_title_setup_key">Setup key</string>
    <string name="restriction_description_setup_key">(Required) Setup key used to register the device</string>
    <string name="restriction_title_enterprise_name">Enterprise name</string>
    <string name="restriction_description_enterprise_name">(Optional) Organization identifier</string>
    <string name="restriction_title_serial_number">Serial number</string>
    <string name="restriction_description_serial_number">(Required) Device serial number</string>
    <string name="restriction_title_device_name">Device name</string>
    <string name="restriction_description_device_name">(Required) Custom device name</string>
    <string name="restriction_title_imei">IMEI</string>
    <string name="restriction_description_imei">(Required) Device IMEI</string>
    <string name="restriction_title_skip_manual_permissions">Skip Manual Permissions</string>
    <string name="restriction_description_skip_manual_permissions">(Optional) Skips Device Admin and Accessibility prompts. Prey Lock will be unavailable; only native MDM wipe will work.</string>
</resources>