<?xml version="1.0" encoding="utf-8"?>
<!--
  Created by Carlos Yaconi
  Copyright 2012 Fork Ltd. All rights reserved.
  License: GPLv3
  Full license at "/LICENSE"
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="PREFS_APP"
        android:title="@string/app_name"
        >
        <Preference
            android:key="PREFS_GOTO_WEB_CONTROL_PANEL"
            android:summary="@string/preferences_go_to_control_panel_summary"
            android:title="@string/preferences_go_to_control_panel_title" >
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
        android:key="PREFS_CAT_PREFS"
        android:title="@string/preferences_config_title"
        >
        <com.prey.preferences.ChangePinPreferences
            android:key="PREFS_CHANGE_PIN"
            android:dialogIcon="@drawable/logo"
            android:dialogTitle="@string/preference_pin_dialog_title"
            android:negativeButtonText="@string/cancel"
            android:positiveButtonText="@string/ok"
            android:summary="@string/preference_pin_summary"
            android:title="@string/preference_pin"
            />

        <Preference
            android:key="PREFS_SMS"
            android:summary="@string/preference_sms_summary"
            android:title="@string/preference_sms"

            />

        <com.prey.preferences.DisablePowerCheckBoxPreference
            android:defaultValue="false"
            android:key="PREFS_DISABLE_POWER"
            android:summary="@string/preferences_disable_power_options_summary"
            android:title="@string/preferences_disable_power_options_title"
            />



        <ListPreference
            android:entries="@array/listScheduledEntries"
            android:entryValues="@array/listScheduledValues"
            android:key="PREFS_SCHEDULED"
            android:summary="@string/preferences_scheduled_summary"
            android:title="@string/preferences_scheduled_title" />


    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/preferences_detach_title"
        >
        <com.prey.preferences.DetachDevicePreferences
            android:dialogIcon="@drawable/logo"
            android:dialogMessage="@string/preferences_detach_dialog_message"
            android:dialogTitle="@string/preferences_detach_dialog_title"
            android:key="PREFS_DETACH"
            android:negativeButtonText="@string/no"
            android:positiveButtonText="@string/yes"
            android:summary="@string/preferences_detach_summary"
            android:title="@string/preferences_detach_title"

            />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/preferences_about_category_name"
        >
        <EditTextPreference
            android:dialogIcon="@drawable/logo"
            android:dialogMessage="@string/preferences_about_message"
            android:dialogTitle="@string/preferences_about_title"
            android:key="PREFS_ABOUT"
            android:positiveButtonText="@string/ok"
            android:selectable="false"
            android:summary=""
            android:title="@string/preferences_about" />
    </PreferenceCategory>
</PreferenceScreen>