<?xml version="1.0" encoding="utf-8"?>
<restrictions xmlns:android="http://schemas.android.com/apk/res/android" >

    <restriction
        android:key="setup_key"
        android:title="@string/restriction_title_setup_key"
        android:restrictionType="string"
        android:description="@string/restriction_description_setup_key"
        android:defaultValue="" />

    <restriction
        android:key="enterprise_name"
        android:title="@string/restriction_title_enterprise_name"
        android:restrictionType="string"
        android:description="@string/restriction_description_enterprise_name"
        android:defaultValue="" />

    <restriction
        android:key="serial_number"
        android:title="@string/restriction_title_serial_number"
        android:restrictionType="string"
        android:description="@string/restriction_description_serial_number"
        android:defaultValue="" />

    <restriction
        android:key="device_name"
        android:title="@string/restriction_title_device_name"
        android:restrictionType="string"
        android:description="@string/restriction_description_device_name"
        android:defaultValue="" />

    <restriction
        android:key="imei"
        android:title="@string/restriction_title_imei"
        android:restrictionType="string"
        android:description="@string/restriction_description_imei"
        android:defaultValue="" />

    <restriction
        android:key="skip_manual_permissions"
        android:title="@string/restriction_title_skip_manual_permissions"
        android:restrictionType="bool"
        android:description="@string/restriction_description_skip_manual_permissions"
        android:defaultValue="false" />

</restrictions>