<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_w"
    android:orientation="vertical" >

    
     <TextView
        android:id="@+id/textViewInit1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_subtitle"
        android:textColor="#000000"
         android:textSize="14sp"
         android:fontFamily="MagdaCleanMono"
         android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
         android:layout_above="@+id/textViewInit2"

          />
     
     <TextView
        android:id="@+id/textViewInit2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_title"
        android:textColor="#000000"
        android:textSize="23sp"
        android:textStyle="bold"
         android:fontFamily="Avenir Next LT Pro"
         android:layout_marginBottom="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"

 		android:layout_above="@+id/editTextName"

         />






    <EditText
        android:id="@+id/editTextName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		android:inputType="text"
        android:ems="10"
         android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:layout_above="@+id/editTextEmailAddress"
        android:hint="@string/field_name_signup"
        android:textColorHint="#9D9C96"
        android:textColor="#000"
          />



    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
         android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:layout_above="@+id/editTextPassword"
        android:hint="@string/field_email_signup"
        android:textColorHint="#9D9C96"
        android:textColor="#000"
         />




    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
         android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:layout_above="@+id/buttonSignup"
        android:hint="@string/field_password_signup"
        android:textColorHint="#9D9C96"
        android:textColor="#000"
         />

    <Button
        android:id="@+id/buttonSignup"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:text="@string/button_signup"

        android:background="#3578BB"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:fontFamily="Avenir Next LT Pro"

        android:layout_above="@+id/linear_agree_terms_conditions"


        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"

         />

    <LinearLayout
        android:id="@+id/linear_agree_terms_conditions"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_above="@+id/linear_confirm_over"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        >

        <CheckBox
            android:id="@+id/checkBox_linear_agree_terms_condition"
            android:background="#3578BB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_linear_agree_terms_condition"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"

            android:layout_marginTop="-10dp"
            android:fontFamily="MagdaCleanMono"

            android:text="@string/i_agree_terms_conditions"
            android:textColor="#000000"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_confirm_over"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_above="@+id/linkSignup"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"
        >

        <CheckBox

            android:id="@+id/checkBox_linear_confirm_over"
            android:layout_width="wrap_content"
            android:background="#3578BB"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/text_linear_confirm_over"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/i_confirm_i_am_over_16"
            android:textColor="#000000"
            android:textSize="14sp"
            android:fontFamily="MagdaCleanMono"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="-10dp"

            />

    </LinearLayout>
    <TextView
        android:id="@+id/linkSignup"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/link_signup"
        android:textColor="#3C77B9"
         
        android:textStyle="bold"

        android:gravity="left"


        android:layout_alignParentBottom="true"
        />


    

</RelativeLayout>    