<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/onb_06"
    android:orientation="vertical">







    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_above="@+id/textView2"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:textSize="23sp"
        android:text="@string/tour_06_title"
        android:textStyle="bold"
        android:textColor="#fff" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_above="@+id/buttontour01"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/tour_06_subtitle"
        android:textColor="#fff" />

    <Button

        android:id="@+id/buttontour01"
        android:layout_width="fill_parent"
        android:layout_height="50dp"


        android:text="@string/tour_06_button"
        android:textColor="#fff"
        android:textSize="23sp"
        android:textStyle="bold"

        android:background="#2A5E93"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
         />

</RelativeLayout>