<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#1E2938"
    android:orientation="vertical" >



    <ImageView
        android:id="@+id/imgViewPrey"

        android:layout_marginTop="30dp"
        android:src="@drawable/prey_logo_b_mono2"
        android:layout_width="120dp"
        android:layout_height="30dp" />







    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:gravity="right"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/linearLayout3"
        android:layout_alignEnd="@+id/linearLayout3">

        <ImageView
            android:id="@+id/imgViewPrey2"
            android:src="@drawable/native_protected"
            android:layout_width="191dp"
            android:layout_height="match_parent"

            android:layout_alignParentTop="true"
            android:layout_alignBottom="@+id/textView2" />
    </LinearLayout>


    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"

        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="140dp"
        android:textSize="11sp"
        android:text="@string/protect_title_1"
        android:textStyle="bold"
        android:fontFamily="MagdaCleanMono"
        android:textColor="#efeae8" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="50dp"
        android:text="@string/protect_title_2"
        android:textSize="26sp"
        android:textStyle="bold"
        android:fontFamily="MagdaCleanMono"
        android:textColor="#23b37f" />

    <EditText
        android:id="@+id/password_pass_txt"

        android:layout_above="@+id/device_ready_h2_text"
        android:layout_marginBottom="10dp"
        android:hint="@string/password_hint"
        android:textColorHint="#9D9C96"
        android:textColor="#000"
        android:background="#fff"

        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="10dp"

        android:inputType="textPassword"
        android:layout_width="fill_parent"
        android:layout_height="36dp">
        <requestFocus />
    </EditText>






    <TextView
        android:id="@+id/device_ready_h2_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:gravity="left"
        android:layout_above="@+id/password_btn_login"
        android:text="@string/password_subtitle"
        android:textColor="#fff"
        android:textSize="15sp" />

    <Button
        android:id="@+id/password_btn_login"
        android:layout_height="40dp"
        android:background="#3578BB"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="Avenir Next LT Pro"

        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="fill_parent"

        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/link_forgot_password"
        android:text="@string/password_button" />

    <TextView
        android:id="@+id/link_forgot_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="70dp"
        android:gravity="left"
        android:text="@string/password_forgot"
        android:textColor="#3578bb"
        android:textSize="15sp"
        android:layout_above="@+id/textView6"
        />





</RelativeLayout>